Revert effect of change from version 1.17. Problem is that external stylesheets which use relative addresses to import other stylesheets may not parse correctly when using the URI class; case in point was the DocBook demo app. With this change, we first attempt the parse using the URL class (as before 1.17), and only if that fails, we use URI. URL should work for normal cases where the url follows a standard protocols. Tested with both the DocBook demo and the browser demo.